--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -295,15 +295,17 @@
                                 <div class="oe_clear"/>
                             </page>
                             <page string="Materials">
-                                <field name="material_line" mode="tree" context="{'repair_id':active_id}">
+
+                                <field name="material_line" mode="tree" >
                                     <tree string="Material Lines" editable="bottom">
-                                        <field name="product_uom_qty"/>
+                                        <!--<field name="repair_id" attrs="{'invisible':0}"/>-->
                                         <field name="product_id"/>
+                                        <field name="product_uom_qty"/>
                                         <field name="name"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
                                         <field name="move_id"/>
-                                        <field name="name"/>
+
                                     </tree>
                                 </field>
                             </page>
