[ADD] material_line icon consume

--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -298,13 +298,15 @@
 
                                 <field name="material_line_ids" mode="tree" >
                                     <tree string="Material Lines" editable="bottom">
-                                        <!--<field name="repair_id" attrs="{'invisible':0}"/>-->
                                         <field name="product_id"/>
                                         <field name="product_uom_qty"/>
+                                        <field name="product_uom"/>
                                         <field name="name"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
                                         <field name="move_id"/>
+                                        <button name="consume_done" type="object" string="Confirm"
+                                                class="oe_highlight"/>
 
                                     </tree>
                                 </field>
