--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -3,16 +3,16 @@
     <data>
 
         <!-- Project Project Form View -->
-       <record id="project_project_view_form_simplified" model="ir.ui.view">
-           <field name="name">project.project.view.form.simplified</field>
-           <field name="model">project.project</field>
-           <field name="inherit_id" ref="project.project_project_view_form_simplified"/>
-           <field name="arch" type="xml">
-               <xpath expr="//field[@name='name']" position="before">
-                   <field name="car_work"/>
-               </xpath>
-           </field>
-       </record>
+        <record id="project_project_view_form_simplified" model="ir.ui.view">
+            <field name="name">project.project.view.form.simplified</field>
+            <field name="model">project.project</field>
+            <field name="inherit_id" ref="project.project_project_view_form_simplified"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="before">
+                    <field name="car_work"/>
+                </xpath>
+            </field>
+        </record>
 
         <!-- Inherit Form View to Modify it -->
         <record id="edit_project" model="ir.ui.view">
@@ -21,27 +21,27 @@
             <field name="inherit_id" ref="project.edit_project"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='label_tasks']" position="after">
-                        <label for="car_work" class="oe_inline" string="It's a Car's work Area?"/>
-                        <field name="car_work"/>
+                    <label for="car_work" class="oe_inline" string="It's a Car's work Area?"/>
+                    <field name="car_work"/>
                 </xpath>
             </field>
         </record>
 
         <!--Action for Kanban View-->
-         <record id="action_car_project_kanban_to_repair_kanban" model="ir.actions.act_window">
+        <record id="action_car_project_kanban_to_repair_kanban" model="ir.actions.act_window">
             <field name="name">Repairs</field>
             <field name="res_model">car_workshop.repair</field>
             <field name="view_mode">kanban,form,calendar,tree</field>
             <field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>
             <field name="context">{
-                    'group_by': 'stage_id',
-                    'search_default_project_id': [active_id],
-                    'default_project_id': active_id,
-                    'search_default_in_work': 1,
+                'group_by': 'stage_id',
+                'search_default_project_id': [active_id],
+                'default_project_id': active_id,
+                'search_default_in_work': 1,
                 }
             </field>
-             <field name="tree_view_id" ref="car-workshop_repair_view_tree"/>
-             <field name="search_view_id" ref="car-workshop_repair_view_search"/>
+            <field name="tree_view_id" ref="car-workshop_repair_view_tree"/>
+            <field name="search_view_id" ref="car-workshop_repair_view_search"/>
 
         </record>
 
@@ -50,7 +50,8 @@
             <field name="name">project.project.kanban</field>
             <field name="model">project.project</field>
             <field name="arch" type="xml">
-                <kanban class="oe_background_grey o_kanban_dashboard o_project_kanban o_emphasize_colors" on_create="project.open_create_project">
+                <kanban class="oe_background_grey o_kanban_dashboard o_project_kanban o_emphasize_colors"
+                        on_create="project.open_create_project">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="color"/>
@@ -67,13 +68,20 @@
                                     <div class="o_kanban_card_content">
                                         <div class="o_kanban_primary_left">
                                             <div class="o_primary">
-                                                <span><t t-esc="record.name.value"/></span>
+                                                <span>
+                                                    <t t-esc="record.name.value"/>
+                                                </span>
                                                 <span t-if="record.partner_id.value">
-                                                    <strong><t t-esc="record.partner_id.value"/></strong>
+                                                    <strong>
+                                                        <t t-esc="record.partner_id.value"/>
+                                                    </strong>
                                                 </span>
                                             </div>
                                             <div t-if="record.alias_name.value and record.alias_domain.value">
-                                                <span><i class="fa fa-envelope"/> <t t-esc="record.alias_id.value"/></span>
+                                                <span>
+                                                    <i class="fa fa-envelope"/>
+                                                    <t t-esc="record.alias_id.value"/>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
@@ -87,15 +95,25 @@
                                             <ul class="oe_kanban_colorpicker" data-field="color"/>
                                         </div>
                                     </div>
-                                    <a class="o_kanban_manage_toggle_button o_left" href="#" groups="project.group_project_manager"><i class="fa fa-ellipsis-v"/></a>
-                                    <span class="o_right"><field name="is_favorite" widget="boolean_favorite" nolabel="1"/></span>
+                                    <a class="o_kanban_manage_toggle_button o_left" href="#"
+                                       groups="project.group_project_manager">
+                                        <i class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <span class="o_right">
+                                        <field name="is_favorite" widget="boolean_favorite" nolabel="1"/>
+                                    </span>
                                 </div>
                                 <div class="o_project_kanban_boxes">
-                                    <a class="o_project_kanban_box" name="%(action_car_project_kanban_to_repair_kanban)d" type="action">
+                                    <a class="o_project_kanban_box"
+                                       name="%(action_car_project_kanban_to_repair_kanban)d" type="action">
                                         <div>
-                                            <span class="o_value"><t t-esc="record.repair_count.value"/></span>
+                                            <span class="o_value">
+                                                <t t-esc="record.repair_count.value"/>
+                                            </span>
                                             <span class="o_label">Repairs</span>
-                                            <a t-if="record.task_needaction_count.raw_value" class="o_needaction" name="134" type="action" context="{'search_default_message_needaction': 1}">
+                                            <a t-if="record.task_needaction_count.raw_value" class="o_needaction"
+                                               name="134" type="action"
+                                               context="{'search_default_message_needaction': 1}">
                                                 <t t-esc="record.task_needaction_count.raw_value"/>
                                             </a>
                                         </div>
@@ -107,6 +125,8 @@
                 </kanban>
             </field>
         </record>
+
+
 
         <!--Action Areas Menu-->
         <record id="action_car_areas_menu" model="ir.actions.act_window">
@@ -121,11 +141,22 @@
             <field name="target">main</field>
         </record>
 
+        <record id="action_prueba_unique_area" model="ir.actions.server">
+            <field name="name">Pruebas, Redirect</field>
+            <field name="model_id" ref="model_project_project"/>
+            <field name="state">code</field>
+            <field name="code">
+obj_project = env['project.project']
+action = obj_project._action_redirect_area()
+
+            </field>
+        </record>
+
         <!--Project Menu-->
         <menuitem id="car_areas_menu" name="Areas"
                   parent="main_car_workshop_menu"
                   sequence="1"
-                  action="action_car_areas_menu"
+                  action="action_prueba_unique_area"
         />
 
     </data>
