--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
 
-       <record id="car-workshop_res_config_settings_view_form" model="ir.ui.view">
+       <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form.inherit.car-workshop</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="5"/>
@@ -16,7 +16,7 @@
                     <div class="row mt16 o_settings_container">
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <field name="unique_area"/>
+                                <!--<field name="unique_area_setting"/>-->
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="unique_area"/>
@@ -43,7 +43,7 @@
             <field name="name">Settings</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">res.config.settings</field>
-            <field name="view_id" ref="car-workshop_res_config_settings_view_form"/>
+            <field name="view_id" ref="res_config_settings_view_form"/>
             <field name="view_mode">form</field>
             <field name="target">inline</field>
             <field name="context">{'module' : 'car_workshop'}</field>
@@ -52,7 +52,7 @@
         <!--Settings Menu-->
         <menuitem id="car_settings_menu" name="Settings"
                   parent="car_vconfig_menus"
-                  sequence="1" action="car-workshop_config_settings_action"/>
+                  sequence="1" action="car-workshop_config_settings_action" groups="base.group_system"/>
 
     </data>
 </odoo>
