--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -16,20 +16,15 @@
                     <div class="row mt16 o_settings_container">
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <!--<field name="unique_area_setting"/>-->
+                                <field name="unique_area_setting"/>
                             </div>
                             <div class="o_setting_right_pane">
-                                <label for="unique_area"/>
+                                <label for="unique_area_setting"/>
                                 <div class="text-muted">
                                     Set the interactive Areas menu. If it's check and there is one Area. The menu Area go to the repairs
                                     of that area.
                                 </div>
-                                <!--<div class="content-group" attrs="{'invisible': [('unique_areas','=',False)]}">-->
-                                    <!--<div class="mt16">-->
-                                        <!---->
-                                        <!--<button name="107" icon="fa-arrow-right" type="action" string="Attributes" class="btn-link"/>-->
-                                    <!--</div>-->
-                                <!--</div>-->
+
                             </div>
                         </div>
                     </div>
