--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -16,7 +16,8 @@
                     <div class="row mt16 o_settings_container">
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <field name="unique_area_setting"/>
+                                <field name="areas_count" attrs="{'invisible':1}"/>
+                                <field name="unique_area_setting" attrs="{'readonly': [('areas_count', '!=', '1')]}"/>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="unique_area_setting"/>
