--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -17,7 +17,7 @@
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
                                 <field name="areas_count" attrs="{'invisible':1}"/>
-                                <field name="unique_area_setting" attrs="{'readonly': [('areas_count', '!=', '1')]}"/>
+                                <field name="unique_area_setting" attrs="{'readonly': [('areas_count', '>', 1)]}"/>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="unique_area_setting"/>
@@ -25,7 +25,19 @@
                                     Set the interactive Areas menu. If it's check and there is one Area. The menu Area go to the repairs
                                     of that area.
                                 </div>
-
+                            </div>
+                        </div>
+                         <div class="col-xs-12 col-md-6 o_setting_box">
+                            <div class="o_setting_left_pane">
+                                <field name="module_sdi_unique_area"/>
+                            </div>
+                            <div class="o_setting_right_pane">
+                                <label for="module_sdi_unique_area"/>
+                                <div class="text-muted">
+                                    Texto PRUEBAS. Te instala el modulo 'sdi_unique_area'. Este modulo añade un menú
+                                    'Unique Area' que puedes ver en el archivo unque_area.xml y que llama al action que hay definido
+                                    encima.
+                                </div>
                             </div>
                         </div>
                     </div>
