--- a/sdi_unique_area/views/unique_area.xml
+++ b/sdi_unique_area/views/unique_area.xml
@@ -11,9 +11,9 @@
             <field name="context">{
                 'group_by': 'stage_id',
                 'search_default_project_id': [
-                    ('car-worshop.project_car-workshop_1')d
+                   ref('car-workshop.project_car-workshop_1')
                 ],
-                'default_project_id': ('car-worshop.project_car-workshop_1')d,
+                'default_project_id': ref('car-workshop.project_car-workshop_1'),
                 'search_default_in_work': 1,
                 }
             </field>
