--- a/car-workshop/views/inherit_res_config_settings.xml
+++ b/car-workshop/views/inherit_res_config_settings.xml
@@ -29,12 +29,14 @@
                         </div>
                          <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_left_pane">
-                                <field name="module_sdi_unique_area"/>
+                                <field name="module_sdi_unique_area" readonly="1"/>
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="module_sdi_unique_area"/>
                                 <div class="text-muted">
-                                    Texto PRUEBAS. Te instala el modulo 'sdi_unique_area'. Este modulo añade un menú
+                                    Funcionalidad en TEST.<br/>
+                                    Utilize la funcionalidad "Unique Area 'Repair and Revision'".<br/>
+                                    Te instala el modulo 'sdi_unique_area'. Este modulo añade un menú
                                     'Unique Area' que puedes ver en el archivo unque_area.xml y que llama al action que hay definido
                                     encima.
                                 </div>
