--- a/sdi_unique_area/views/unique_area.xml
+++ b/sdi_unique_area/views/unique_area.xml
@@ -12,6 +12,8 @@
                 'group_by': 'stage_id',
                 'search_default_project_id': [
                    ref('car-workshop.project_car-workshop_1')
+                <!--Probar:-->
+                <!--%(external_id)s-->
                 ],
                 'default_project_id': ref('car-workshop.project_car-workshop_1'),
                 'search_default_in_work': 1,
