--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -3,7 +3,6 @@
     <data>
 
 
-
         <!-- Project Repair Form View -->
         <record id="car-workshop_repair_view_form" model="ir.ui.view">
             <field name="name">car-workshop.repair.form</field>
@@ -66,7 +65,7 @@
                             </button>
                             <button name="action_finised" type="object" class="oe_stat_button" icon="fa-archive">
                                 <field name="finished_stage" widget="boolean_button" string="Finished"
-                                        options='{"terminology": {
+                                       options='{"terminology": {
                                     "string_true": "Finished",
                                     "hover_true": "Activate again?",
                                     "string_false": "Active",
@@ -302,7 +301,7 @@
                             </page>
                             <page string="Materials">
 
-                                <field name="material_line_ids" mode="tree" >
+                                <field name="material_line_ids" mode="tree">
                                     <tree string="Material Lines" editable="bottom">
                                         <field name="product_id" domain="[['type','=','consu']]"/>
                                         <field name="product_uom_qty"/>
@@ -313,14 +312,14 @@
                                         <field name="move_id"/>
                                         <button name="consume_done" type="object" string="Consume"
                                                 class="oe_highlight" attrs="{'invisible': [('consumed','=',True)]}"
-                                                    icon="fa-glass">
+                                                icon="fa-bars">
                                             <field name="consumed"/>
                                         </button>
 
                                     </tree>
                                 </field>
                             </page>
-                            <page string="Binnacle">
+                            <page string="Work">
                                 <group>
                                     <group>
                                         <field name="planned_hours" widget="float_time"/>
@@ -397,6 +396,17 @@
             </field>
         </record>
 
+        <!--<template id="assets_backend" name="account assets" inherit_id="web.assets_backend">-->
+            <!--<xpath expr="." position="inside">-->
+                <!--<link rel="stylesheet" href="/car-workshop/static/src/css/car_workshop.css"/>-->
+            <!--</xpath>-->
+        <!--</template>-->
+
+        <!--<style>-->
+<!--.deadline_value_color {-->
+    <!--color: #FF0000;-->
+<!--}-->
+        <!--</style>-->
 
         <!--Car-Workshop Repair Kanban View -->
         <record id="car-workshop_repair_view_kanban" model="ir.ui.view">
@@ -433,11 +443,15 @@
                                  colors="{&quot;done&quot;: &quot;success&quot;, &quot;blocked&quot;: &quot;danger&quot;}"/>
                     <templates>
                         <t t-name="kanban-box">
+
                             <div class="oe_kanban_global_click o_res_partner_kanban">
                                 <div class="o_kanban_image">
                                     <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.vehicle_id.raw_value)"/>
                                 </div>
                                 <div class="oe_kanban_details">
+                                    <field name="date_start" widget="date"/>
+                                    <br/>
+
                                     <strong class="o_kanban_record_title">
                                         <field name="repair_title"/>
                                         <br/>
@@ -495,15 +509,15 @@
             <field name="model">car_workshop.repair</field>
             <field name="arch" type="xml">
                 <calendar string="Repairs" date_start="date_start" date_delay="planned_hours" color="partner_id">
-                    <field name="name" />
+                    <field name="name"/>
                 </calendar>
             </field>
         </record>
 
         <!--Car-Workshop Repair Search View -->
         <record id="car-workshop_repair_view_search" model="ir.ui.view">
-           <field name="name">car-workshop.repair.calendar</field>
-           <field name="model">car_workshop.repair</field>
+            <field name="name">car-workshop.repair.search</field>
+            <field name="model">car_workshop.repair</field>
             <field name="arch" type="xml">
                 <search>
                     <field name="repair_title"/>
@@ -514,8 +528,12 @@
                     <field name="finished_stage"/>
                     <filter string="Repairs in Work" name="in_work" domain="[['finished_stage','=',0]]"/>
                     <filter string="Repairs Completed" name="out_work" domain="[['finished_stage','=',1]]"/>
+                     <group expand="0" string="Group By">
+                         <filter name="group_dstart" string="Entry Date" domain="[]" context="{'group_by':'date_start'}"/>
+                         <filter name="group_ddeadline" string="Deadline Date" domain="[]" context="{'group_by':'date_deadline'}"/>
+                    </group>
                 </search>
-           </field>
+            </field>
         </record>
 
         <!--Car-Workshop Repair Tree View -->
@@ -536,19 +554,19 @@
 
         <!--Action Repair Menu-->
         <!--<record model="ir.actions.act_window" id="action_car_repairs_config">-->
-            <!--<field name="name">Repairs</field>-->
-            <!--<field name="res_model">car_workshop.repair</field>-->
-            <!--<field name="form_view_id" ref="car-workshop_repair_view_form"/>-->
-            <!--<field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>-->
-            <!--<field name="calendar_view_id" ref="car-workshop_repair_view_calendar"/>-->
-            <!--<field name="view_type">form</field>-->
-            <!--<field name="view_mode">kanban,calendar,tree,form</field>-->
+        <!--<field name="name">Repairs</field>-->
+        <!--<field name="res_model">car_workshop.repair</field>-->
+        <!--<field name="form_view_id" ref="car-workshop_repair_view_form"/>-->
+        <!--<field name="kanban_view_id" ref="car-workshop_repair_view_kanban"/>-->
+        <!--<field name="calendar_view_id" ref="car-workshop_repair_view_calendar"/>-->
+        <!--<field name="view_type">form</field>-->
+        <!--<field name="view_mode">kanban,calendar,tree,form</field>-->
         <!--</record>-->
 
 
         <!--Repair Menu-->
         <!--<menuitem id="car_repairs_menu" name="Repairs"-->
-                  <!--parent="main_car_workshop_menu"-->
-                  <!--sequence="2" action="action_car_repairs_config"/>-->
+        <!--parent="main_car_workshop_menu"-->
+        <!--sequence="2" action="action_car_repairs_config"/>-->
     </data>
 </odoo>
