--- a/tire-catalog/views/tire_brand.xml
+++ b/tire-catalog/views/tire_brand.xml
@@ -56,7 +56,7 @@
             <field name="res_model">tire_catalog.tire_brand</field>
             <field name="form_view_id" ref="tire_brand_view_form"/>
             <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
+            <field name="view_mode">kanban,form,tree</field>
         </record>
 
 
