--- a/car-workshop/views/inherit_account_invoice.xml
+++ b/car-workshop/views/inherit_account_invoice.xml
@@ -10,17 +10,11 @@
             <field name="arch" type="xml">
 
                 <field name="sent" position="after">
-
-                    <div>
-                        <p t-if="self.description.text == false">
-                            <field name="description" attrs="{'invisible': [('this.text', '=', False)]}"/>
-                        </p>
-                        <p t-else="">
-                            <field name="description"/>
-                        </p>
-                    </div>
+                    <field name="description"/> PRUEBAS (Borrar)
+                    <field name="aux_descrip" invisible="1"/>
+                    <!--Para que no aparezca en el form si esta vacio-->
+                    <!--<field name="description" attrs="{'invisible': [('aux_descrip', '=', True)]}"/>-->
                 </field>
-
 
             </field>
         </record>
