--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -397,15 +397,15 @@
         </record>
 
         <!--<template id="assets_backend" name="account assets" inherit_id="web.assets_backend">-->
-            <!--<xpath expr="." position="inside">-->
-                <!--<link rel="stylesheet" href="/car-workshop/static/src/css/car_workshop.css"/>-->
-            <!--</xpath>-->
+        <!--<xpath expr="." position="inside">-->
+        <!--<link rel="stylesheet" href="/car-workshop/static/src/css/car_workshop.css"/>-->
+        <!--</xpath>-->
         <!--</template>-->
 
         <!--<style>-->
-<!--.deadline_value_color {-->
-    <!--color: #FF0000;-->
-<!--}-->
+        <!--.deadline_value_color {-->
+        <!--color: #FF0000;-->
+        <!--}-->
         <!--</style>-->
 
         <!--Car-Workshop Repair Kanban View -->
@@ -449,6 +449,7 @@
                                     <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.vehicle_id.raw_value)"/>
                                 </div>
                                 <div class="oe_kanban_details">
+                                    <field name="progress" widget="progressbar"/>
                                     <field name="date_start" widget="date"/>
                                     <br/>
 
@@ -461,7 +462,17 @@
                                         <br/>
                                     </strong>
 
-                                    <field name="date_deadline"/>
+                                    <small class="o_kanban_record_subtitle text-muted">
+                                    <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
+                                       t-set="red">oe_kanban_text_red
+                                    </t>
+
+                                    <span t-attf-class="#{red || ''}">
+                                        <i>
+                                            <field name="date_deadline"/>
+                                        </i>
+                                    </span>
+                                    </small>
 
                                     <div class="o_kanban_tags_section">
                                         <field name="tag_ids" widget="many2many_tags"
@@ -528,9 +539,11 @@
                     <field name="finished_stage"/>
                     <filter string="Repairs in Work" name="in_work" domain="[['finished_stage','=',0]]"/>
                     <filter string="Repairs Completed" name="out_work" domain="[['finished_stage','=',1]]"/>
-                     <group expand="0" string="Group By">
-                         <filter name="group_dstart" string="Entry Date" domain="[]" context="{'group_by':'date_start'}"/>
-                         <filter name="group_ddeadline" string="Deadline Date" domain="[]" context="{'group_by':'date_deadline'}"/>
+                    <group expand="0" string="Group By">
+                        <filter name="group_dstart" string="Entry Date" domain="[]"
+                                context="{'group_by':'date_start'}"/>
+                        <filter name="group_ddeadline" string="Deadline Date" domain="[]"
+                                context="{'group_by':'date_deadline'}"/>
                     </group>
                 </search>
             </field>
